style: fix minor layout issue

--- a/src/routes/private/home/styles.css
+++ b/src/routes/private/home/styles.css
@@ -9,13 +9,15 @@
   gap: 1.25rem;
 }
 
-@media screen and (min-width: 40rem) {
-  .home {
-    margin-left: 5rem;
-  }
-
+@media screen and (min-width: 36rem) {
   .video-grid {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
+@media screen and (min-width: 50rem) {
+  .home {
+    margin-left: 5rem;
   }
 }
 
